[gd_scene load_steps=4 format=3 uid="uid://dyj8e23f50yu5"]

[ext_resource type="Texture2D" uid="uid://c5o65ek6vew30" path="res://Art/UpButton.png" id="1_urffe"]
[ext_resource type="Script" path="res://counter.gd" id="1_ydasm"]
[ext_resource type="Texture2D" uid="uid://d0os1n1omqe6c" path="res://Art/DownButton.png" id="3_jp2is"]

[node name="Counter" type="Area2D"]
script = ExtResource("1_ydasm")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = -1
offset_right = 108.0
offset_bottom = 73.0
color = Color(1, 0, 1, 1)

[node name="Number" type="Label" parent="."]
offset_left = 9.0
offset_top = -10.0
offset_right = 99.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpButton" type="TextureButton" parent="."]
offset_left = 70.1
offset_top = 21.0
offset_right = 601.767
offset_bottom = 552.667
scale = Vector2(0.06, 0.06)
texture_normal = ExtResource("1_urffe")
ignore_texture_size = true
stretch_mode = 3

[node name="DownButton" type="TextureButton" parent="."]
offset_left = 6.0
offset_top = 21.0
offset_right = 537.667
offset_bottom = 552.667
scale = Vector2(0.06, 0.06)
texture_normal = ExtResource("3_jp2is")
ignore_texture_size = true
stretch_mode = 3
flip_v = true

[connection signal="pressed" from="UpButton" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="DownButton" to="." method="_on_down_button_pressed"]
